<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Asterplay</string>
    <string name="pairing_title">Ative seu dispositivo</string>
    <string name="pairing_subtitle">Acesse o painel e vincule sua lista M3U ao MAC abaixo</string>
    <string name="pairing_tagline">Reprodutor de mídia universal</string>
    <string name="pairing_disclaimer">Este aplicativo é apenas um reprodutor de mídia. Não fornecemos, hospedamos nem distribuímos nenhum conteúdo. Todo o conteúdo exibido é de responsabilidade exclusiva do usuário, que deve possuir os direitos ou a autorização necessária para reproduzi-lo.</string>
    <string name="pairing_form_title">Entrar com código</string>
    <string name="pairing_form_subtitle">Informe o código, usuário e senha fornecidos pelo seu provedor.</string>
    <string name="pairing_hint_code">Código</string>
    <string name="pairing_hint_user">Usuário</string>
    <string name="pairing_hint_pass">Senha</string>
    <string name="pairing_login_button">Entrar</string>
    <string name="pairing_mac_label">MAC do dispositivo</string>
    <string name="pairing_key_label">Código do dispositivo</string>
    <string name="pairing_url_label">appasterplay.top</string>
    <string name="pairing_waiting">Aguardando vinculação pelo painel…</string>
    <string name="pairing_error">Não foi possível contactar o painel. Tentando novamente…</string>
    <string name="pairing_fill_all">Preencha código, usuário e senha.</string>
    <string name="pairing_login_error">Código, usuário ou senha inválidos.</string>
    <string name="pairing_login_progress">Validando credenciais…</string>
    <string name="browse_live">TV ao vivo</string>
    <string name="browse_movies">Filmes</string>
    <string name="browse_series">Séries</string>
    <string name="browse_settings">Ajustes</string>
    <string name="browse_empty">Nenhum item na sua lista.</string>
    <string name="row_continue">Continuar assistindo</string>
    <string name="row_favorites">Favoritos</string>
    <string name="row_all">Todos</string>
    <string name="search_results">Resultados (%1$d)</string>
    <string name="fav_hint">Abra um canal e pressione o botão amarelo para favoritar.</string>
    <string name="fav_added">Adicionado aos favoritos</string>
    <string name="fav_removed">Removido dos favoritos</string>
</resources>
